<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.fragment.employee.EmployeeFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emp_last_name"
            android:textSize="@dimen/emp_text_size" />

        <TextView
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/emp_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emp_name"
            android:textSize="@dimen/emp_text_size" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/emp_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emp_birth_date"
            android:textSize="@dimen/emp_text_size" />

        <TextView
            android:id="@+id/birth_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/emp_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emp_age"
            android:textSize="@dimen/emp_text_size" />

        <TextView
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/emp_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/emp_speciality"
            android:textSize="@dimen/emp_text_size" />

        <TextView
            android:id="@+id/speciality"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/emp_text_size" />
    </LinearLayout>

</LinearLayout>